--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "dependencies": {
     "next": "9.3.6",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
-  }
+    "react-dom": "16.13.1",
+    "react-markdown": "^4.3.1",
+    "sass": "^1.26.5",
+    "sourcebit": "^0.8.0",
+    "sourcebit-source-contentful": "^0.6.0",
+    "sourcebit-target-next": "^0.3.3",
+    "sourcebit-transform-assets": "^0.2.2"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/zeit/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
